# bayou

./: .gitignore  Cargo.toml  README.md  if_expr  unnamed
crates/bayou_backend/: Cargo.toml
crates/bayou_backend/src/: codegen.rs  layout.rs  lib.rs  linker.rs
crates/bayou_common/: Cargo.toml
crates/bayou_common/src/: lib.rs
crates/bayou_compiler/: Cargo.toml
crates/bayou_compiler/src/: cli.rs  codegen.rs  compilation.rs  compiler.rs  diagnostic.rs  diagnostics.rs  main.rs  platform.rs  resolver.rs  session.rs  sourcemap.rs  symbols.rs  target.rs
crates/bayou_compiler/src/diagnostics/: mod.rs
crates/bayou_compiler/src/frontend/: lexer.rs  mod.rs  resolver.rs  tests.rs
crates/bayou_compiler/src/frontend/parser/: expr.rs  mod.rs
crates/bayou_compiler/src/ir/: ast.rs  ir.rs  mod.rs  token.rs  vars.rs
crates/bayou_compiler/src/lexer/: mod.rs  tests.rs
crates/bayou_compiler/src/lexer/snapshots/: bayou_compiler__lexer__tests__integer.snap  bayou_compiler__lexer__tests__integer_overflow.snap  bayou_compiler__lexer__tests__newlines.snap  bayou_compiler__lexer__tests__no_newlines.snap  bayou_compiler__lexer__tests__spaces.snap
crates/bayou_compiler/src/parser/: expr.rs  lexer.rs  mod.rs  tests.rs
crates/bayou_compiler/src/parser/snapshots/: bayou_compiler__parser__tests__missing_paren.snap  bayou_compiler__parser__tests__no_brace.snap  bayou_compiler__parser__tests__no_return_value.snap  bayou_compiler__parser__tests__no_semicolon.snap  bayou_compiler__parser__tests__no_semicolon_or_return_value.snap  bayou_compiler__parser__tests__no_space.snap  bayou_compiler__parser__tests__return_integer.snap  bayou_compiler__parser__tests__wrong_case.snap
crates/bayou_compiler/src/passes/: entry_point.rs  mod.rs  type_check.rs
crates/bayou_compiler/src/utils/: keyvec.rs  mod.rs  peek.rs
crates/bayou_diagnostic/: Cargo.toml
crates/bayou_diagnostic/examples/: chumsky_examples.rs
crates/bayou_diagnostic/src/: lib.rs  render.rs  sources.rs  span.rs  span2.rs
crates/bayou_frontend/: Cargo.toml
crates/bayou_frontend/src/: ast.rs  gather_modules.rs  lib.rs  lower.rs  module_global_lookup.rs  module_loader.rs  module_tree.rs  scope.rs  token.rs
crates/bayou_frontend/src/lexer/: mod.rs  tests.rs
crates/bayou_frontend/src/lexer/snapshots/: bayou_frontend__lexer__tests__integer.snap  bayou_frontend__lexer__tests__integer_overflow.snap  bayou_frontend__lexer__tests__newlines.snap  bayou_frontend__lexer__tests__no_newlines.snap  bayou_frontend__lexer__tests__spaces.snap
crates/bayou_frontend/src/parser/: expr.rs  mod.rs  tests.rs
crates/bayou_frontend/src/parser/snapshots/: bayou_frontend__parser__tests__missing_paren.snap  bayou_frontend__parser__tests__no_brace.snap  bayou_frontend__parser__tests__no_return_value.snap  bayou_frontend__parser__tests__no_semicolon.snap  bayou_frontend__parser__tests__no_semicolon_or_return_value.snap  bayou_frontend__parser__tests__no_space.snap  bayou_frontend__parser__tests__return_integer.snap  bayou_frontend__parser__tests__wrong_case.snap
crates/bayou_frontend/src/snapshots/: bayou_frontend__gather_modules__tests__basic_lower.snap
crates/bayou_interner/: Cargo.toml  README.md
crates/bayou_interner/src/: arena.rs  lib.rs
crates/bayou_ir/: Cargo.toml
crates/bayou_ir/src/: ast.rs  ir.rs  lib.rs  symbols.rs  token.rs
crates/bayou_middle/: Cargo.toml
crates/bayou_middle/src/: entry_point.rs  lib.rs  resolver.rs  type_check.rs
crates/bayou_middle/src/passes/: entry_point.rs  type_check.rs
crates/bayou_session/: Cargo.toml
crates/bayou_session/src/: diagnostics.rs  lib.rs  module_loader.rs  sourcemap.rs
crates/bayou_utils/: Cargo.toml
crates/bayou_utils/src/: keyvec.rs  lib.rs
runtime/: linux-x86_64.asm
samples/: add2.bayou  if_expr.bayou  retbool.bayou
src/: cli.rs  codegen.rs  lexer.rs  main.rs  parser.rs  registers.rs  resolver.rs  session.rs  symbols.rs  test_suite.rs  tests2.rs  utils.rs
src/ast/: mod.rs  registers.rs  token.rs
src/backend/: codegen.rs  mod.rs  regalloc.rs  registers.rs
src/diagnostics/: mod.rs  render.rs  render2.rs  sources.rs  span.rs
src/diagnostics/snapshots/: tinyc__diagnostics__render__tests__simple_diagnostic.snap
src/frontend/: lexer.rs  lower.rs  mod.rs  parser.rs  resolver.rs
src/frontend/ast/: mod.rs
src/frontend/parser/: expr.rs  mod.rs
src/ir/: ast.rs  mod.rs  ops.rs  registers.rs  ssa.rs  token.rs  vars.rs
src/utils/: keyvec.rs  mod.rs
