[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.lints.clippy]
# pedantic = "warn"

map-unwrap-or = "warn"
missing_panics_doc = "warn"
redundant-else = "warn"
return-self-not-must-use = "warn"
semicolon-if-nothing-returned = "warn"
todo = "warn"
uninlined-format-args = "warn"
unnecessary-wraps = "warn"

[workspace.lints.rust]
missing_copy_implementations = "warn"

[workspace.dependencies]
derive-where = "1.2.7"
insta = { version = "1.34.0", features = ["yaml"] }
macro_rules_attribute = "0.2.0"
serde = { version = "1.0.195", features = ["derive"] }
target-lexicon = "0.12.13"
thiserror = "1.0.56"
