[package]
name = "bayou_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
bayou_ir = { path = "../bayou_ir" }
bayou_session = { path = "../bayou_session" }
bayou_interner = { path = "../bayou_interner" }

cranelift = "0.104.1"
cranelift-module = "0.104.1"
cranelift-object = "0.104.1"
target-lexicon = { workspace = true }
thiserror = { workspace = true }
