[package]
name = "bayou_compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
bayou_diagnostic = { path = "../bayou_diagnostic", features = ["serialize"] }
bayou_common = { path = "../bayou_common" }

clap = { version = "4.4.18", features = ["derive"] }
cranelift = "0.104.1"
cranelift-module = "0.104.1"
cranelift-object = "0.104.1"
goblin = "0.8.0"
lasso = { version = "0.7.2", features = ["serialize"] }
macro_rules_attribute = "0.2.0"
serde = { version = "1.0.195", features = ["derive"] }
target-lexicon = "0.12.13"
temp-dir = "0.1.12"
temp-file = "0.1.8"
thiserror = "1.0.56"

[dev-dependencies]
insta = { version = "1.34.0", features = ["yaml"] }
