[package]
name = "bayou_compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
bayou_common = { path = "../bayou_common" }
bayou_diagnostic = { path = "../bayou_diagnostic", features = ["serialize"] }
bayou_ir = { path = "../bayou_ir" }

bayou_frontend = { path = "../bayou_frontend" }

clap = { version = "4.4.18", features = ["derive"] }
cranelift = "0.104.1"
cranelift-module = "0.104.1"
cranelift-object = "0.104.1"
goblin = "0.8.0"
serde = { workspace = true }
target-lexicon = "0.12.13"
temp-dir = "0.1.12"
temp-file = "0.1.8"
thiserror = { workspace = true }

[dev-dependencies]
insta = { version = "1.34.0", features = ["yaml"] }
