[package]
name = "bayou_compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
bayou_utils = { path = "../bayou_utils" }
bayou_interner = { path = "../bayou_interner", features = ["serialize"] }
bayou_ir = { path = "../bayou_ir" }
bayou_session = { path = "../bayou_session" }

bayou_frontend = { path = "../bayou_frontend" }
bayou_middle = { path = "../bayou_middle" }
bayou_backend = { path = "../bayou_backend" }

clap = { version = "4.4.18", features = ["derive"] }
serde = { workspace = true }
target-lexicon = { workspace = true }
temp-dir = "0.1.12"
temp-file = "0.1.8"
thiserror = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
