[package]
name = "bayou_frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
bayou_common = { path = "../bayou_common" }
bayou_diagnostic = { path = "../bayou_diagnostic", features = ["serialize"] }
bayou_ir = { path = "../bayou_ir" }
bayou_session = { path = "../bayou_session" }

insta = { workspace = true }
macro_rules_attribute = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
