[package]
name = "bayou_frontend"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
bayou_utils = { path = "../bayou_utils" }
bayou_ir = { path = "../bayou_ir" }
bayou_session = { path = "../bayou_session" }
bayou_interner = { path = "../bayou_interner" }

insta = { workspace = true }
macro_rules_attribute = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
