[package]
name = "bayou_ir"
version = "0.1.0"
edition = "2021"

[dependencies]
bayou_utils = { path = "../bayou_utils" }
bayou_diagnostic = { path = "../bayou_diagnostic", features = ["serialize"] }
bayou_session = { path = "../bayou_session" }

macro_rules_attribute = { workspace = true }
serde = { workspace = true }
