[package]
name = "bayou_session"
version = "0.1.0"
edition = "2021"

[dependencies]
bayou_common = { path = "../bayou_common" }
bayou_diagnostic = { path = "../bayou_diagnostic", features = ["serialize"] }

lasso = { version = "0.7.2", features = ["serialize"] }
serde = { workspace = true }
target-lexicon = "0.12.13"
thiserror = { workspace = true }
