[package]
name = "bayou_session"
version = "0.1.0"
edition = "2021"

[dependencies]
bayou_utils = { path = "../bayou_utils" }
bayou_diagnostic = { path = "../bayou_diagnostic", features = ["serialize"] }

lasso = { version = "0.7.2", features = ["serialize"] }
serde = { workspace = true }
target-lexicon = { workspace = true }
thiserror = { workspace = true }
