[package]
name = "bayou_session"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
bayou_utils = { path = "../bayou_utils" }
bayou_interner = { path = "../bayou_interner", features = ["serialize"] }
bayou_diagnostic = { path = "../bayou_diagnostic", features = ["serialize"] }

serde = { workspace = true }
target-lexicon = { workspace = true }
thiserror = { workspace = true }
